compiler/tests/compile-error/reference-errors.arret
(import [stdlib base])

(def _ nopenopenope)
      ;^^^^^^^^^^^^ ERROR unable to resolve symbol

(def _ Str)
      ;^^^ ERROR cannot take the value of a type

(def _ List)
      ;^^^^ ERROR cannot take the value of a type

(def _ ->!)
      ;^^^ ERROR cannot take the value of a type

(def _ fn)
      ;^^ ERROR cannot take the value of a primitive